# recipe_finder

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  gunicorn.py  manage.py  pyproject.toml  pytest.ini  requirements.txt  setup.cfg
account/: admin.py  managers.py  models.py
account/api/: serializers.py  urls.py  views.py
account/migrations/: 0001_initial.py  0002_alter_user_phone.py
core/account/: admin.py  apps.py  managers.py  models.py
core/account/api/: serializers.py  urls.py
core/account/migrations/: 0001_initial.py
core/recipe/: apps.py  models.py
core/recipe/api/: filters.py  serializers.py  urls.py  views.py
core/recipe/migrations/: 0002_alter_recipe_avg_rating_alter_recipe_number_reviews.py
core/recipe/tests/: conftest.py  test_recipe.py  test_review.py
core/recipe_scout/: asgi.py  settings.py  urls.py  wsgi.py
core/services/recipe/: daily_recipes_service.py  recipe_service.py
core/utils/: location.py
docker_compose/: docker-compose.yml
nginx/: nginx.conf
recipe/: admin.py  models.py
recipe/api/: filters.py  pagination.py  permissions.py  serializers.py  urls.py  views.py
recipe/migrations/: 0001_initial.py  0002_like.py  0002_recipe_liked_users.py  0002_remove_ingredient_description.py  0003_alter_ingredient_slug_alter_recipe_image_review.py  0003_alter_recipe_number_reviews_alter_recipe_slug.py  0003_remove_like_created_at_remove_like_like_count_and_more.py  0004_recipe_avg_rating_alter_review_author.py  0004_rename_date_created_recipe_created_at_and_more.py  0005_recipe_number_reviews.py  0006_ingredient_category.py  0007_recipe_author_alter_ingredient_caloric_content_and_more.py
recipe/tests/: conftest.py  test_recipe.py  test_review.py
recipe_scout/: asgi.py  settings.py  urls.py  wsgi.py
services/recipe/: daily_recipes_service.py  recipe_service.py
