[project]
name = "recipe-scout"
version = "0.1.0"
description = ""
authors = [
    {name = "Bohdan Brazhynenko",email = "fenixbogdan730@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "asgiref (==3.8.1)",
    "django (==5.1.5)",
    "django-cleanup (==9.0.0)",
    "django-filter (==24.3)",
    "djangorestframework (==3.15.2)",
    "djangorestframework-simplejwt (==5.4.0)",
    "pillow (==11.1.0)",
    "psycopg2 (==2.9.10)",
    "pyjwt (==2.10.1)",
    "python-decouple (==3.8)",
    "sqlparse (==0.5.3)",
    "typing-extensions (==4.12.2)",
    "tzdata (==2024.2)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
